--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
+<% provide(:title, 'Home') %>
 <h1>Sample App</h1>
-<h2>Joe!</h2>
 <p>
   This is the home page for the
   <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
